# storyworld-mcp

./: .gitignore  .tmp_check_images.py  .tmp_fastmcp_inspect.py  .tmp_images_test.py  .tmp_resource_test.py  .tmp_smoke.py  AGENTS.md  Dockerfile  README.md  compose.yaml  mcp.json  pyproject.toml  requirements.txt  serve.json
.github/workflows/: ci.yml
scripts/: fetch_data.py
src/mcp_server/: __init__.py  config.py  downloader.py  mcp_app.py  models.py
tests/: test_api.py
