[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storyworld-mcp"
version = "0.2.0"
description = "FastMCP server providing character contexts and assets for agent impersonation"
readme = "README.md"
license = {text = "MIT"}
authors = [ {name = "Your Name", email = "you@example.com"} ]
requires-python = ">=3.11"
dependencies = [
    "fastmcp[tasks]>=3.1.0,<4.0.0",
    "pydantic",
    "PyYAML",
    "httpx",
    "requests",
    "huggingface-hub",
    "python-dotenv",
    "requests"
]

[project.scripts]
storyworld-mcp = "mcp_server.mcp_app:main"
